Updated header styling to be more readable and have correctly aligned icons using flex

--- a/v3/base/app/scss/style.scss
+++ b/v3/base/app/scss/style.scss
@@ -61,8 +61,6 @@ section {
     }
 }
 
-
-
 main {
     padding: 1.5em 5em;
 }
@@ -132,10 +130,13 @@ p, li {
 
 // Custom
 header {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     background-color: lightgrey;
     background-image: url($header-image-url);
     background-size: cover;
     padding: 3em 5em;
+    display: flex;
+    align-items: center;
     overflow: auto;
 
     h1, h2, h3, h4, h5, h6, a, p, li {
@@ -165,12 +166,17 @@ a:visited, a:hover, a:link {
     color: inherit;
 }
 .contact ul {
-    margin-top: 10px;
     color: white;
-    font-size: 1.2em;
+    font-size: 1.25em;
     float: right;
+    font-style: italic;
+
     li {
-        margin-top: 0.3em;
+        margin-top: 0.4em;
+        i {
+            width: 15px;
+            text-align: center;
+        }
     }
 }
 
